Added Clear button

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -29,6 +29,7 @@
                 </label>
             </div>
             <a menu-close class="button button-block button-positive icon-right ion-search" value="submit" ng-click="doSearch(mySearch)">Search</a>
+            <a class="button button-block button-assertive" value="submit" ng-click="clearForm()">Reset</a>
         </ion-content>
     </ion-side-menu>
 </ion-side-menus>
